<resources>
    <string name="app_name">Droid Cafe</string>
<!--    MainActivity-->
    <string name="text_intro">Droid Desserts</string>
    <string name="donuts_description">Donuts are glazed and sprinkled with candy</string>
    <string name="icecream_descripton">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="froyo_description">Froyo is premium self-serve frozen yogurt</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
<!--    OrderActivity-->
    <string name="name_label">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label">Address</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="phone_label">Phone</string>
    <string name="enter_phone_hint">Enter phone</string>
    <string name="note_label">Note</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="choose_delivery">Choose a delivery method</string>
    <string name="same_day_delivery">Same day messenger service</string>
    <string name="next_day_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>

    <string name="button_date_picker">Date</string>
    <string name="date_message">Date: </string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

<!--    Menu-->
    <string name="menu_order">Order</string>
    <string name="menu_status">Status</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_contact">Contact</string>
    <string name="action_order_message">You selected Order</string>
    <string name="action_status_message">You selected Status</string>
    <string name="action_favorites_message">You selected Favorites</string>
    <string name="action_contact_message">You selected Contact</string>

</resources>