<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/menu_order"
        android:id="@+id/action_order"
        app:showAsAction="always"
        android:icon="@drawable/ic_shopping_cart"
        android:orderInCategory="10"/>

    <item android:title="@string/menu_status"
        android:id="@+id/action_status"
        app:showAsAction="always"
        android:icon="@drawable/ic_status_info"
        android:orderInCategory="20"/>

    <item android:title="@string/menu_favorites"
        android:id="@+id/action_favorites"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="30"/>

    <item android:title="@string/menu_contact"
        android:id="@+id/action_contact"
        app:showAsAction="never"
        android:orderInCategory="100"/>
</menu>